Completed Basic Requirements

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
-              <input type="text" placeholder="Type keywords here." class="form-control" name="searchText">
+              <input type="text" placeholder="Search for images here." class="form-control" name="searchText">
             </div>
             <button type="submit" class="btn btn-primary search" name="searchButton">Search</button>
           </form>
@@ -52,14 +52,14 @@
     <div class="container">
       <h1 class="search-title">Flickr Search</h1>
       <ul id="images">
-        <!-- TODO: Replace the content in this area with a grid of images based on the results of the search. -->
+
         <li class="placeholder">Search for images using the search bar above!</li>
       </ul>
 
       <hr>
 
       <footer>
-        <p>&copy; Jane Student 2015</p>
+        <p>&copy; Jiun Wang 2017</p>
       </footer>
     </div> <!-- /container -->
 
